<resources>
    <string name="app_name">Menu Generale</string>
    <string name="addS">Ajouter une société</string>
    <string name="updateS">Editer une société</string>
    <string name="listS">Liste de tous les sociétes</string>
    <string name="btn_save">ENREGISTRER</string>
    <string name="btn_cancel">ANNULER</string>
    <string name="btn_update">MODIFIER</string>
    <string name="btn_delete">SUPPRIMER</string>
    <string name="lbl1">Tapez le nom de la societe</string>
    <string name="lbl2">Tapez le secteur d\'activite</string>
    <string name="lbl3">Tapez le nombre d\'employe</string>
</resources>